# Confucius4-TTS

./: .gitignore  README.md  README.zh.md  example.py  fastapi_app.py  gradio_app.py  pyproject.toml  requirements-cu128.txt  requirements-nvfp4.txt  requirements-vllm.txt  requirements.txt
config/: inference_config.yaml
confuciustts/cli/: inference.py  run_inference.py
confuciustts/flow/: flow.py  flow_matching.py  length_regulator.py  nvfp4.py
confuciustts/flow/DiT/: dit.py  modules.py
confuciustts/frontend/: text_normalizer.py
confuciustts/llm/: llm.py  position_embeddings.py  vllm_model.py  vllm_patch.py  vllm_plugin.py  vllm_runtime.py
scripts/: run_fastapi_uv.sh
tools/: convert_t2s_vllm.py
